k8s-state/templates/nem2p/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: default
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: ghcr.io/nmagee/fastapi-demo:1.117
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: default
  labels:
    app: fastapi
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: fastapi.uvasds.sh
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
            path: /
