k8s-state/templates/nem2p/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accord-deployment
  namespace: default
  labels:
    app: accord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accord
  template:
    metadata:
      labels:
        app: accord
    spec:
      containers:
        - name: accord
          image: uvarc/accord-demo:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: accord-service
  namespace: default
  labels:
    app: accord
spec:
  type: ClusterIP
  selector:
    app: accord
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accord-ingress
  namespace: default
#  annotations:
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: accord.uvasds.sh
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: accord-service
                port:
                  number: 80
            path: /
